--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
      body {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
+        background-color: #ffffff;
       }
 
       .form-signin {
@@ -27,4 +25,42 @@
         height: auto;
         margin-bottom: 15px;
         padding: 7px 9px;
+      }
+ html, body {
+        height: 100%;
+
+        /* The html and body elements cannot have any padding or margin. */
+      }
+.spacer {height:30px;clear:both;}
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 60px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+      }
+	  ul.nav li a img {
+		  width:70%;
+	  }
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+      	.spacer {
+      		height: 0px;
+      	}
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
       }
